<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/fragment_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/fragment_movie_detail_poster_imageview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:paddingLeft="0dp"
            android:paddingBottom="0dp"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/fragment_movie_detail_movie_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/movie_detail_movie_title_text_size"
            android:paddingBottom="@dimen/movie_detail_category_separation_padding_bottom" />

        <TextView
            android:id="@+id/fragment_movie_detail_releasedate_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag_movie_detail_release_date_title"
            android:textSize="@dimen/movie_detail_releasedate_title_text_size" />

        <TextView
            android:id="@+id/fragment_movie_detail_releasedate_value_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/movie_detail_releasedate_value_text_size"
            android:paddingBottom="@dimen/movie_detail_category_separation_padding_bottom" />


        <!-- will get to this is stage 2 -->
<!--        <TextView
            android:id="@+id/fragment_movie_detail_genre_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/movie_detail_genre_title_text_size"
            android:text="Genre:" />

        <TextView
            android:id="@+id/fragment_movie_detail_genre_names_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/movie_detail_genre_names_text_size"
            android:paddingBottom="@dimen/movie_detail_category_separation_padding_bottom"
            android:text="Comedy, Family, Horror" />-->

        <TextView
            android:id="@+id/fragment_movie_detail_vote_average_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag_movie_detail_vote_avg_title"
            android:textSize="@dimen/movie_detail_vote_average_title_text_size" />

        <TextView
            android:id="@+id/fragment_movie_detail_vote_average_value_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/movie_detail_vote_average_value_text_size"
            android:paddingBottom="@dimen/movie_detail_category_separation_padding_bottom" />

        <TextView
            android:id="@+id/fragment_movie_detail_overview_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frag_movie_detail_plot_summary_title"
            android:textSize="@dimen/movie_detail_overview_title_text_size" />

        <TextView
            android:id="@+id/fragment_movie_detail_overview_content_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/movie_detail_overview_content_text_size" />

    </LinearLayout>
</ScrollView>